# itcsimlib

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  README.txt  __init__.py  energies_.c  energies_2par.h  energies_6par.h  energies_8par.h  energies_hybrid.c  energies_ian.c  energies_jump.c  energies_jump2.c  energies_jumphybrid.c  energies_simple.c  energies_sk.c  fit_classes.py  fit_functions.py  grid_classes.py  grid_functions.py  itc_calc.py  itc_classes.py  itc_experiment.py  itc_fit.py  itc_grid.py  itc_lib.py  itc_model.c  itc_model.h  itc_model.py  itc_sim.c  itc_sim.h  itc_sim.py  library_2par.c  library_6par.c  library_8par.c  library_notes.txt  makefile.in  manipulator.py  (+11 more)
docs/: conf.py  examples.rst  index.rst  installation.rst  itcsimlib.rst  tutorials.rst
examples/: README.txt  dilution.py  estimate.py  hill.py  ising_plotter.py  itcsimlib  mass_spec.ipynb  massspec.fit  massspec.py  massspec_old.py  neighbors.py  partition_function.py  populations.py  weicheng.py
itcsimlib/: __init__.py  ga.py  ga_fit.py  ga_tools.py  itc_calc.py  itc_experiment.py  itc_fit.py  itc_grid.py  itc_model.py  itc_sim.py  manipulator.py  mass_spec.py  model_bngl.py  model_drakon.py  model_independent.py  model_ising.py  model_ising_plotter.py  model_trap.py  ms_experiment.py  pytc_integration.py  requirements.txt  thermo.py  utilities.py
model_trap/: configure.in  energies_ik.c  itc_model.c  itc_model.h  itc_sim.c  itc_sim.h
test/: __init__.py  __main__.py  all.py  base.py  drakon.py  itc_experiment.py  itc_fit.py  itc_grid.py  itc_model.py  itc_sim.py  (+8 more)
(+88 files in other folders)
